<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".StartActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@android:color/white"
        android:textSize="50sp" />
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:padding="10dp"
        android:layout_marginTop="0dp"
        android:contentDescription="image"
        android:background="@drawable/round_primary_bg"
        android:src="@drawable/ic_logo" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_primary_bg"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_primary_bg"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>